--- a/frontend/src/utils/reset.scss
+++ b/frontend/src/utils/reset.scss
@@ -26,7 +26,7 @@
   --right-color: #29a322;
 
   /* global variable */
-  --font: 'Montserrat', Arial, Helvetica, sans-serif;
+  --font: cursive;
   --nav-height: 7.2rem;
   --sm-border-radius: 4px;
   --border-radius: 6px;
@@ -68,6 +68,7 @@ html {
 }
 
 body {
+  height: 100%;
   position: relative;
   background-color: var(--bg-color-main);
   overflow: auto;
@@ -75,6 +76,7 @@ body {
 
 #root {
   width: 100%;
+  height: 100%;
   overflow-x: hidden;
   position: relative;
 }
