--- a/frontend/src/pages/styles/leader-board.scss
+++ b/frontend/src/pages/styles/leader-board.scss
@@ -17,7 +17,7 @@
 }
 
 .leaderboard-grid {
-  display: grid;
+/*   display: grid; */
   gap: 3rem;
   grid-template-columns: 1fr;
   padding: 1.8rem 0;
